# pyshade

./: .editorconfig  .gitignore  CLAUDE.md  LICENSE  README.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: design.md  packaging.md
docs_site/: README.md  build.py  pyproject.toml
docs_site/assets/: demo-mock.js
docs_site/content/en/: extra.toml
docs_site/content/en/guides/: home.md  quickstart.md
docs_site/content/zh/: props.toml
docs_site/content/zh/guides/: home.md  quickstart.md
docs_site/src/docs_site/: __init__.py  app.py  content.py  demos.py  export.py  handlers.py  i18n.py  nav.py  pages.py  state.py
examples/: README.md
examples/component_gallery/: README.md  pyproject.toml
examples/component_gallery/src/component_gallery/: Tauri.toml  __main__.py  app.py  handlers.py  pages.py  runtime.py  state.py
examples/login_form/: README.md  pyproject.toml
examples/login_form/src/login_form/: Tauri.toml  __init__.py  __main__.py  app.py  handlers.py  pages.py  runtime.py
examples/settings_panel/: README.md  pyproject.toml
examples/settings_panel/src/settings_panel/: Tauri.toml  __main__.py  app.py  handlers.py  pages.py  runtime.py  state.py
examples/task_board/: README.md  pyproject.toml
examples/task_board/src/task_board/: Tauri.toml  __main__.py  app.py  handlers.py  pages.py  runtime.py  state.py
examples/task_board/src/task_board/capabilities/: default.toml
frontend/: README.md  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vite.testkit.config.ts
frontend/bundle/: index.html
frontend/src/: index.css  main.tsx
frontend/src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  dialog.tsx  select.tsx
frontend/src/ipc/: shadeFetch.ts  wire.ts
frontend/src/runtime/: app.tsx  bench.ts  invoke.ts  page.ts  patches.ts  push.ts  scheme.ts  store.ts
frontend/src/testkit/: index.ts  types.ts
frontend/src/testkit/suites/: closeWindow.ts  connection.tsx  emptyBody.ts  headers.ts  payload.ts  routing.tsx  rtt.ts  spa.ts  streaming.ts  theme.tsx  typing.ts
scripts/: assert_wheel_assets.py  build_vendor.py  check_css_coverage.py  native_canary.py  pin_cpython.py  pin_esbuild.py  sync_docs_content.py
src/pyshade/: __init__.py  _cache.py  actions.py  app.py  cli.py  events.py  expr.py  nav.py  page.py  push.py  runtime.py  scheme.py  shell.py  state.py  theme.py
src/pyshade/asgi/: __init__.py  _adapter.py  _bridge.py  _dev.py  _lifespan.py  _types.py  _wire.py
src/pyshade/bundler/: __init__.py  _assets.py  _entry.py  _esbuild.py  _html.py  _staging.py
src/pyshade/compiler/: __init__.py  _content.py  checks.py  emit_app.py  emit_page.py  emit_theme.py  emit_types.py  errors.py  ir.py  writer.py
src/pyshade/components/: __init__.py  accordion.py  alert.py  badge.py  base.py  button.py  card.py  checkbox.py  code_block.py  dialog.py  each.py  enums.py  heading.py  input.py  link.py  markdown.py  options.py  progress.py  radio_group.py  scroll_area.py  select.py  separator.py  skeleton.py  slider.py  stack.py  switch.py  tabs.py  text.py  textarea.py  tooltip.py
src/pyshade/dev/: __init__.py  __main__.py  _server.py  _supervisor.py  _worker.py
src/pyshade/docs/: __init__.py  introspect.py
src/pyshade/packager/: __init__.py  _cpython.py  _platform.py  _pyembed.py  _render.py  _scaffold.py  _tauri_cli.py
src/pyshade/packager/_templates/src-tauri/: Cargo.toml.tmpl  gitignore  tauri.conf.json.tmpl  taurignore
src/pyshade/packager/_templates/src-tauri/src/: lib.rs  main.rs.tmpl
src/pyshade/testing/: __init__.py  __main__.py  _collector.py  _config.py  _harness.py  _report.py  _routes.py
src/pyshade/web/: __init__.py  _serve.py
tests/: test_cli.py  test_client_vals.py  test_events.py  test_nav.py  test_page.py  test_push.py  test_scheme.py  test_smoke.py  test_state.py  test_theme.py
tests/asgi/: fakes.py  test_adapter.py  test_bridge.py  test_dev_http.py  test_lifespan.py  test_pytauri_contract.py  test_scope.py  test_streaming.py  test_wire.py
tests/bundler/: test_esbuild_acquire.py  test_html.py  test_incremental.py  test_staging_entry.py
tests/compiler/: test_compiler.py  test_content_compile.py  test_each_compile.py  test_expr_compile.py  test_form_controls_compile.py  test_gallery_compile.py  test_nav_compile.py  test_overlay_layout_compile.py  test_scheme_compile.py
tests/compiler/golden/: ChatPage.gen.tsx  ContentPage.gen.tsx  FormControlsPage.gen.tsx  GalleryPage.gen.tsx  LayoutPage.gen.tsx  LoginPage.gen.tsx  MarkdownContentPage.gen.tsx  NavHomePage.gen.tsx  OverlayPage.gen.tsx  SchemePage.gen.tsx  SettingsPage.gen.tsx  app.gen.tsx  app_nav.gen.tsx  manifest.json  types.gen.ts
tests/components/: test_content_dto.py  test_dto.py  test_each_dto.py  test_event_prop_actions.py  test_expr_props.py  test_wave1_dto.py  test_wave2_dto.py  test_wave3_dto.py
tests/dev/: test_server.py  test_supervisor.py  test_worker.py
tests/docs/: test_introspect.py
tests/docs_site/: test_build_clean.py  test_drift.py  test_export.py
tests/e2e/: test_compile_example.py  test_compile_new_examples.py  test_each_http.py  test_event_http.py  test_nav_http.py  test_numeric_value_http.py  test_push_http.py  test_settings_panel_example.py  test_state_http.py
tests/e2e_native/: conftest.py  test_board_native.py  test_native.py
tests/expr/: test_cond_value_of.py  test_defenses.py  test_dual_eval.py  test_nodes.py  test_operators.py
tests/packager/: test_cpython_acquire.py  test_orchestrate.py  test_platform_env.py  test_pyembed_tauri_cli.py  test_render.py  test_scaffold.py  test_shell.py
tests/testing/: test_harness_report.py  test_routes.py
tests/web/: test_serve.py
