[project]
name = "pyshade"
version = "0.1.0.dev0"
description = "Build modern desktop apps in pure Python — Pydantic component DTOs compiled to shadcn/ui React, running on the system WebView via pytauri."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"
authors = [{ name = "于小丘 Yuerchu", email = "admin@yuxiaoqiu.cn" }]
keywords = ["desktop", "gui", "tauri", "shadcn", "pydantic", "webview"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: User Interfaces",
]
dependencies = [
  "pydantic>=2.7",
  "fastapi>=0.115",
  "anyio>=4",
  "loguru>=0.7",
  "pytauri>=0.8,<0.9",
]

[project.scripts]
pyshade = "pyshade.cli:main"

[project.urls]
Documentation = "https://github.com/yuerchu/pyshade"
Source = "https://github.com/yuerchu/pyshade"

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "pyright>=1.1",
  "uvicorn>=0.30",
  "httpx>=0.27",
]
native = [
  "pytauri-wheel>=0.8,<0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 零 Node 打包(design.md §3.6):前端运行时源码 + 物化 vendor + 预编译 CSS 随 wheel 分发。
# dist-vendor/dist-style 是发版产物:先跑 scripts/build_vendor.py 与 pnpm -C frontend build:css。
[tool.hatch.build.targets.wheel.force-include]
"frontend/src/runtime" = "pyshade/_frontend/src/runtime"
"frontend/src/ipc" = "pyshade/_frontend/src/ipc"
"frontend/src/components" = "pyshade/_frontend/src/components"
"frontend/src/lib" = "pyshade/_frontend/src/lib"
"frontend/bundle/index.html" = "pyshade/_frontend/static/index.html"
"frontend/dist-style/style.css" = "pyshade/_frontend/static/style.css"
"frontend/dist-vendor/node_modules" = "pyshade/_frontend/vendor/node_modules"
"frontend/dist-vendor/vendor-manifest.json" = "pyshade/_frontend/vendor-manifest.json"

[tool.hatch.build.targets.sdist]
include = ["src/pyshade", "frontend", "tests", "docs", "README.md"]
exclude = ["frontend/node_modules", "frontend/dist", "frontend/dist-testkit"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# 防线测试特有:故意写"无用"的表达式语句以断言其抛错
"tests/expr/**" = ["B015", "B018"]

[tool.ruff.format]
quote-style = "preserve"

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
# 测试锚定应报错用法(# pyright: ignore[...]):静态该报的必须报,不该报的不许留 ignore
reportUnnecessaryTypeIgnoreComment = "error"

[[tool.pyright.executionEnvironments]]
root = "tests"
extraPaths = [".", "examples/login_form/src", "examples/settings_panel/src"]
# FastAPI 路由函数经装饰器注册;Page 子类定义本身即测试对象(__init_subclass__ 副作用)
reportUnusedFunction = "none"
reportUnusedClass = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["examples/login_form/src", "examples/settings_panel/src"]
markers = ["e2e_native: 真机 WebView E2E(需要 pytauri-wheel + 前端构建产物)"]
addopts = "-m 'not e2e_native'"
