[project]
name = "pyshade"
dynamic = ["version"]
description = "Build modern desktop apps in pure Python — Pydantic component DTOs compiled to shadcn/ui React, running on the system WebView via pytauri."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.14"
authors = [{ name = "于小丘 Yuerchu", email = "admin@yuxiaoqiu.cn" }]
keywords = ["desktop", "gui", "tauri", "shadcn", "pydantic", "webview"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: User Interfaces",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.7",
  "fastapi>=0.115",
  "anyio>=4",
  "loguru>=0.7",
  "pytauri>=0.8,<0.9",
  "tomli>=2; python_version < '3.11'",
  "uvicorn>=0.30",
  "watchfiles>=0.21",
]

[project.optional-dependencies]
# Markdown/CodeBlock 内容组件的编译期依赖(design.md §3.13):运行时不需要,
# pygments ~4MB 不进主依赖/standalone 安装包
content = ["mistune>=3.0", "pygments>=2.17"]
# 原生窗口免 Rust 工具链(pyshade.shell.run 的 dev 形态):PyPI 用户第一个窗口的路径
native = ["pytauri-wheel>=0.8,<0.9"]

[project.scripts]
pyshade = "pyshade.cli:main"

[project.urls]
Homepage = "https://github.com/Yuerchu/pyshade"
Documentation = "https://pyshade-docs.pages.dev"
Repository = "https://github.com/Yuerchu/pyshade"
Issues = "https://github.com/Yuerchu/pyshade/issues"
Changelog = "https://github.com/Yuerchu/pyshade/releases"

[dependency-groups]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "pyright>=1.1",
  "httpx>=0.27",
  "types-pygments>=2.17",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/pyshade/__init__.py"

# 零 Node 打包(design.md §3.6):前端运行时源码 + 物化 vendor + 预编译 CSS 随 wheel 分发。
# 经 hatch_build.py 钩子按存在性注入(fresh checkout 缺发版产物时 editable 安装不受影响);
# 发版 wheel 完整性由 CI wheel-assets job 断言。
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = ["src/pyshade", "frontend", "tests", "docs", "scripts", "README.md", "hatch_build.py"]
exclude = ["frontend/node_modules", "frontend/dist", "frontend/dist-testkit"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# 防线测试特有:故意写"无用"的表达式语句以断言其抛错
"tests/expr/**" = ["B015", "B018"]

[tool.ruff.format]
quote-style = "preserve"

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
# 测试锚定应报错用法(# pyright: ignore[...]):静态该报的必须报,不该报的不许留 ignore
reportUnnecessaryTypeIgnoreComment = "error"

[[tool.pyright.executionEnvironments]]
root = "tests"
extraPaths = [
  ".",
  "examples/login_form/src",
  "examples/settings_panel/src",
  "examples/component_gallery/src",
  "examples/task_board/src",
  "docs_site/src",
]
# FastAPI 路由函数经装饰器注册;Page 子类定义本身即测试对象(__init_subclass__ 副作用)
reportUnusedFunction = "none"
reportUnusedClass = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "examples/login_form/src",
  "examples/settings_panel/src",
  "examples/component_gallery/src",
  "examples/task_board/src",
  "docs_site/src",
]
markers = ["e2e_native: 真机 WebView E2E(需要 pytauri-wheel + 前端构建产物)"]
addopts = "-m 'not e2e_native'"
