[project]
name = "component-gallery"
version = "0.1.0"
description = "PyShade M2 组件画廊:全组件铺开,CI 对生成代码跑真实 tsc"
requires-python = ">=3.10,<3.14"
dependencies = [
  "pyshade",
]

[dependency-groups]
# 开发运行走 pytauri-wheel;standalone 打包不装它(ext_mod 由 Rust 二进制注入)
dev = [
  "pytauri-wheel>=0.8,<0.9",
]

[tool.uv.sources]
pyshade = { path = "../.." }
